policies/require-app-label.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-app-label
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-app-label
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - geofort-test
      validate:
        message: "Pods must have an app label."
        pattern:
          metadata:
            labels:
              app: "?*"
